testsuite/tests/module/mod147.stderr

mod147.hs:6:5: error:
    • Illegal term-level use of the type constructor or class ‘D’
    • imported from ‘Mod147_A’ at mod147.hs:4:1-15
      (and originally defined at Mod147_A.hs:3:1-14)
    • In the expression: D 4
      In an equation for ‘x’: x = D 4
