testsuite/tests/module/mod147.hs
-- !!! exporting tycon (but not dcon with same name.)
module M where

import Mod147_A

x = D 4
